banner e games concluidos

--- a/index.html
+++ b/index.html
@@ -25,7 +25,34 @@
             </nav>
         </div>
     </header>
-    <main></main>
+    <main>
+        <section class="banner">
+            <picture>
+                <source media="(max-width: 90em)" srcset="images/Banner1440.jpg">
+                <img src="images/Banner1920.jpg" alt="Pilotos de fórmula 1, Vamilton, Viccardo, Vetel, Verstapen">
+            </picture>
+            <div class="banner-container">
+                <div class="banner-content">
+                   <div class="banner-text">
+                       <h1>Liga E-players</h1>
+                       <p>O maior portal de campeonatos online</p>
+                       <a href="#">Inscreva-se</a>
+                   </div>
+                </div>
+            </div>
+        </section>
+        <section class="games">
+            <div class="content flex-spaceb-center">
+                <ul class="flex-spaceb-center">
+                    <li><a href="#"><img src="images/formula-1-logo-1-1 1.png" alt="Logo da Fórmula 1"></a></li>
+                    <li><a href="#"><img src="images/logo-lol-300x131 1.png" alt="Logo League of Legends"></a></li>
+                    <li><a href="#"><img src="images/Counter-Strike-Logo-Transparent-PNG 1.png" alt="Logo Counter"></a></li>
+                    <li><a href="#"><img src="images/4bcd537b6c034e297f0030cf08887426 1.png" alt="Logo do Valorant"></a></li>
+                    <li><a href="#"><img src="images/800px-FIFA_series_logo 1.png" alt="logo do Fifa"></a></li>
+                </ul>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
