--- a/index.html
+++ b/index.html
@@ -52,6 +52,24 @@
                 </ul>
             </div>
         </section>
+        <section class="about">
+            <div class="about-angulation">
+                <div class="angulation">
+
+                </div>
+            </div>
+            <div class="container-about">
+                <div class="content-about">
+                    <div class="text-about">
+                        <h2>Como participar das ligas?</h2>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the .
+                            <br>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen boook.</p>
+                    </div> 
+                    <img src="images/lol campeão.png" alt="personagem Ezreal, do jogo League of Legends"> 
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
