Seção ao vivo e em breve concluídas

--- a/index.html
+++ b/index.html
@@ -70,6 +70,49 @@
                 </div>
             </div>
         </section>
+        <section class="games">
+            <div class="content flex-spaceb-center">
+                <div class="partidas-aovivo">
+                    <h2>ao<br>vivo</h2>
+                    <div class="partida">
+                        <div class="time1">
+                            <p>sk</p>
+                            <img src="images/SK 1.png" alt="logo do time 1">
+                        </div>
+                        <p>vs</p>
+                        <div class="time2">
+                            <img src="images/SK 1.png" alt="logo do time 1">
+                            <p>vrs</p>
+                        </div>
+                    </div>
+                </div>         <!--<fim games ao vivo> --> 
+                <div class="games-embreve">
+                    <h2>Em<br>Breve</h2>
+                    <div class="partida">
+                        <div class="time1">
+                            <p>sk</p>
+                            <img src="images/SK 1.png" alt="logo do time 1">
+                        </div>
+                        <p>vs</p>
+                        <div class="time2">
+                            <img src="images/SK 1.png" alt="logo do time 1">
+                            <p>vrs</p>
+                        </div>
+                    </div>
+                    <div class="partida">
+                        <div class="time1">
+                            <p>SK</p>
+                            <img src="images/SK 1.png" alt="Logo do time 1">
+                        </div>
+                        <p>VS</p>
+                        <div class="time2">
+                            <img src="images/SK 1.png" alt="Logo time 2">
+                            <p>VRS</p>
+                        </div>
+                    </div>
+                </div>   
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
