notícias e matches realizados

--- a/index.html
+++ b/index.html
@@ -71,48 +71,191 @@
             </div>
         </section>
         <section class="games">
-            <div class="content flex-spaceb-center">
+            <div class="content flex-spacear-center">
                 <div class="partidas-aovivo">
-                    <h2>ao<br>vivo</h2>
+                    <h2>Ao<br>Vivo</h2>
                     <div class="partida">
                         <div class="time1">
-                            <p>sk</p>
+                            <p>SK</p>
                             <img src="images/SK 1.png" alt="logo do time 1">
                         </div>
                         <p>vs</p>
                         <div class="time2">
-                            <img src="images/SK 1.png" alt="logo do time 1">
-                            <p>vrs</p>
+                            <img src="images/FLA 1.png" alt="Logo time 2">
+                            <p>VRS</p>
                         </div>
                     </div>
                 </div>         <!--<fim games ao vivo> --> 
+                <div class="linha"></div>
                 <div class="games-embreve">
                     <h2>Em<br>Breve</h2>
                     <div class="partida">
                         <div class="time1">
-                            <p>sk</p>
+                            <p>SK</p>
                             <img src="images/SK 1.png" alt="logo do time 1">
                         </div>
                         <p>vs</p>
                         <div class="time2">
-                            <img src="images/SK 1.png" alt="logo do time 1">
-                            <p>vrs</p>
+                            <img src="images/FLA 1.png" alt="Logo time 2">
+                            <p>VRS</p>
                         </div>
                     </div>
                     <div class="partida">
                         <div class="time1">
                             <p>SK</p>
-                            <img src="images/SK 1.png" alt="Logo do time 1">
-                        </div>
-                        <p>VS</p>
-                        <div class="time2">
                             <img src="images/SK 1.png" alt="Logo time 2">
+                        </div>
+                        <p>vs</p>
+                        <div class="time2">
+                            <img src="images/FLA 1.png" alt="Logo time 2">
                             <p>VRS</p>
                         </div>
                     </div>
                 </div>   
             </div>
         </section>
+        <div class="bg-news">
+            <div class="content  flex-spaceb-center">
+                <section class="news">
+                    <h2>Notícias</h2>
+                    <div class="content-news">
+                        <div class="cardnews">
+                            <img src="images/isadora.png" alt="Foto da Jogadora profissinal de e-sports, isadora">
+                            <h3>Título da notícia</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                        </div>
+                        <div class="cardnews">
+                            <img src="images/isadora.png" alt="Foto da Jogadora profissinal de e-sports, isadora">
+                            <h3>Título da notícia</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                        </div>
+                        <div class="cardnews">
+                            <img src="images/isadora.png" alt="Foto da Jogadora profissinal de e-sports, isadora">
+                            <h3>Título da notícia</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                        </div>
+                        <div class="cardnews">
+                            <img src="images/isadora.png" alt="Foto da Jogadora profissinal de e-sports, isadora">
+                            <h3>Título da notícia</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                        </div>
+                        <div class="cardnews">
+                            <img src="images/isadora.png" alt="Foto da Jogadora profissinal de e-sports, isadora">
+                            <h3>Título da notícia</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                        </div>
+                        <div class="cardnews">
+                            <img src="images/isadora.png" alt="Foto da Jogadora profissinal de e-sports, isadora">
+                            <h3>Título da notícia</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                        </div>
+                    </div>
+                </section>
+                <aside class="next-games">
+                    <h2>Próximos jogos</h2>
+                    <div class="matches-bg">
+                        <div class="matches-next-game">
+                            <div class="teams">
+                                <div>
+                                    <p>vrs</p> 
+                                    <img src="images/FLA 1.png" alt="logo do time sk">
+                                </div>
+                                <p>vs</p>
+                                <div>
+                                    <img src="images/SK 1.png" alt="logo do time sk">
+                                    <p>sk</p>
+                                </div>
+                            </div> <!--fim teams-->
+                            <p>12/12/2012 13:00</p>
+                        </div> <!--fim matches-->
+                        <div class="matches-next-game">
+                            <div class="teams">
+                                <div>
+                                    <p>vrs</p> 
+                                    <img src="images/FLA 1.png" alt="logo do time sk">
+                                </div>
+                                <p>vs</p>
+                                <div>
+                                    <img src="images/SK 1.png" alt="logo do time sk">
+                                    <p>sk</p>
+                                </div>
+                            </div> <!--fim teams-->
+                            <p>12/12/2012 13:00</p>
+                        </div> <!--fim matches-->
+                        <div class="matches-next-game">
+                            <div class="teams">
+                                <div>
+                                    <p>vrs</p> 
+                                    <img src="images/FLA 1.png" alt="logo do time sk">
+                                </div>
+                                <p>vs</p>
+                                <div>
+                                    <img src="images/SK 1.png" alt="logo do time sk">
+                                    <p>sk</p>
+                                </div>
+                            </div> <!--fim teams-->
+                            <p>12/12/2012 13:00</p>
+                        </div> <!--fim matches-->
+                        <div class="matches-next-game">
+                            <div class="teams">
+                                <div>
+                                    <p>vrs</p> 
+                                    <img src="images/FLA 1.png" alt="logo do time sk">
+                                </div>
+                                <p>vs</p>
+                                <div>
+                                    <img src="images/SK 1.png" alt="logo do time sk">
+                                    <p>sk</p>
+                                </div>
+                            </div> <!--fim teams-->
+                            <p>12/12/2012 13:00</p>
+                        </div> <!--fim matches-->
+                        <div class="matches-next-game">
+                            <div class="teams">
+                                <div>
+                                    <p>vrs</p> 
+                                    <img src="images/FLA 1.png" alt="logo do time sk">
+                                </div>
+                                <p>vs</p>
+                                <div>
+                                    <img src="images/SK 1.png" alt="logo do time sk">
+                                    <p>sk</p>
+                                </div>
+                            </div> <!--fim teams-->
+                            <p>12/12/2012 13:00</p>
+                        </div> <!--fim matches-->
+                        <div class="matches-next-game">
+                            <div class="teams">
+                                <div>
+                                    <p>vrs</p> 
+                                    <img src="images/FLA 1.png" alt="logo do time sk">
+                                </div>
+                                <p>vs</p>
+                                <div>
+                                    <img src="images/SK 1.png" alt="logo do time sk">
+                                    <p>sk</p>
+                                </div>
+                            </div> <!--fim teams-->
+                            <p>12/12/2012 13:00</p>
+                        </div> <!--fim matches-->
+                        <div class="matches-next-game">
+                            <div class="teams">
+                                <div>
+                                    <p>vrs</p> 
+                                    <img src="images/FLA 1.png" alt="logo do time sk">
+                                </div>
+                                <p>vs</p>
+                                <div>
+                                    <img src="images/SK 1.png" alt="logo do time sk">
+                                    <p>sk</p>
+                                </div>
+                            </div> <!--fim teams-->
+                            <p>12/12/2012 13:00</p>
+                        </div> <!--fim matches-->
+                    </div>
+                </aside>
+            </div>
+        </div>
     </main>
     <footer></footer>
 </body>
