--- a/index.html
+++ b/index.html
@@ -255,8 +255,46 @@
                     </div>
                 </aside>
             </div>
-        </div>
+        </div> <!--fim bg-news-->
     </main>
-    <footer></footer>
+    <footer class="rodape">
+        <div class="content flex-spaceb-center">
+            <div class="links-footer">
+                <div class="links">
+                    <h2>Links Úteis</h2>
+                    <ul>
+                        <li><a href="#">Regras de utilização</a></li>
+                        <li><a href="#">Suporte</a></li>
+                        <li><a href="#">Central de ajuda</a></li>
+                        <li><a href="#">Contato</a></li>
+                    </ul>
+                </div>
+                <div class="links">
+                    <h2>Páginas</h2>
+                    <ul>
+                        <li><a href="#">ínicio</a></li>
+                        <li><a href="#">Campeonatos</a></li>
+                        <li><a href="#">Resultados</a></li>
+                        <li><a href="#">Notícias</a></li>
+                        <li><a href="#">Login/Cadastro</a></li>
+                    </ul>
+                </div>
+            </div>
+            <img class="logo-rodape" src="images/Logo 1.svg" alt="Logo E-players">
+            <div class="socials">
+                <h2>Faça parte do nosso clan, receba notícias e promoções!</h2>
+                <form action="">
+                    <input type="email" placeholder="E-mail">
+                    <input type="submit" value="Cadastrar">
+                </form>
+                <div class="siga-nos">
+                    <h2>Siga-nos em:</h2>
+                    <a href="#"><img src="images/insta.png" alt="Logo do Instagram"></a>
+                    <a href="#"><img src="images/face.png" alt="Logo do Facebook"></a>
+                    <a href="#"><img src="images/yt.png" alt="Logo do Youtube"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
