responsivo 768 to 991 concluido

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <picture>
                 <source media="(max-width: 61.93em)" srcset="images/Banner768.jpg">
                 <source media="(max-width: 90em)" srcset="images/Banner1440.jpg">
+                <source media="(max-width:120em)" srcset="images/Banner1920.jpg">
                 <img src="images/Banner1440.jpg" alt="Pilotos de fórmula 1, Vamilton, Viccardo, Vetel, Verstapen">
             </picture>
             <div class="banner-container">
@@ -47,10 +48,14 @@
             <div class="content flex-spaceb-center">
                 <ul class="flex-spaceb-center">
                     <li><a href="#"><img src="images/formula-1-logo-1-1 1.png" alt="Logo da Fórmula 1"></a></li>
+                    <div class="lol">
                     <li><a href="#"><img src="images/logo-lol-300x131 1.png" alt="Logo League of Legends"></a></li>
+                    </div>
                     <li><a href="#"><img src="images/Counter-Strike-Logo-Transparent-PNG 1.png" alt="Logo Counter"></a></li>
                     <li><a href="#"><img src="images/4bcd537b6c034e297f0030cf08887426 1.png" alt="Logo do Valorant"></a></li>
+                    <div class="fifa">
                     <li><a href="#"><img src="images/800px-FIFA_series_logo 1.png" alt="logo do Fifa" style="width:8em"></a></li>
+                    </div>
                 </ul>
             </div>
         </section>
@@ -75,7 +80,7 @@
         <section class="games2">
             <div class="content flex-spacear-center">
                 <div class="partidas-aovivo">
-                    <h2>Ao<br>Vivo</h2>
+                    <h2>Ao <span>Vivo</span></h2>
                     <div class="partida">
                         <div class="time1">
                             <p>SK</p>
@@ -90,7 +95,7 @@
                 </div>         <!--<fim games ao vivo> --> 
                 <div class="linha"></div>
                 <div class="games-embreve">
-                    <h2>Em<br>Breve</h2>
+                    <h2>Em <span>Breve</span></h2>
                     <div class="partida">
                         <div class="time1">
                             <p>SK</p>
@@ -117,36 +122,36 @@
             </div>
         </section>
         <div class="bg-news">
-            <div class="content  flex-spaceb-center">
+            <div class="content flex-spaceb-center">
                 <section class="news">
                     <h2>Notícias</h2>
                     <div class="content-news">
-                        <div class="cardnews">
+                        <div class="card1 cardnews">
                             <img src="images/isadora.png" alt="Foto da Jogadora profissinal de e-sports, isadora">
                             <h3>Título da notícia</h3>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
                         </div>
-                        <div class="cardnews">
+                        <div class="card2 cardnews">
                             <img src="images/isadora.png" alt="Foto da Jogadora profissinal de e-sports, isadora">
                             <h3>Título da notícia</h3>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
                         </div>
-                        <div class="cardnews">
+                        <div class="card3 cardnews">
                             <img src="images/isadora.png" alt="Foto da Jogadora profissinal de e-sports, isadora">
                             <h3>Título da notícia</h3>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
                         </div>
-                        <div class="cardnews">
+                        <div class="card4 cardnews">
                             <img src="images/isadora.png" alt="Foto da Jogadora profissinal de e-sports, isadora">
                             <h3>Título da notícia</h3>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
                         </div>
-                        <div class="cardnews">
+                        <div class="card5 cardnews">
                             <img src="images/isadora.png" alt="Foto da Jogadora profissinal de e-sports, isadora">
                             <h3>Título da notícia</h3>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
                         </div>
-                        <div class="cardnews">
+                        <div class="card6 cardnews">
                             <img src="images/isadora.png" alt="Foto da Jogadora profissinal de e-sports, isadora">
                             <h3>Título da notícia</h3>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
@@ -156,76 +161,7 @@
                 <aside class="next-games">
                     <h2>Próximos jogos</h2>
                     <div class="matches-bg">
-                        <div class="matches-next-game">
-                            <div class="teams">
-                                <div>
-                                    <p>vrs</p> 
-                                    <img src="images/FLA 1.png" alt="logo do time sk">
-                                </div>
-                                <p>vs</p>
-                                <div>
-                                    <img src="images/SK 1.png" alt="logo do time sk">
-                                    <p>sk</p>
-                                </div>
-                            </div> <!--fim teams-->
-                            <p>12/12/2012 13:00</p>
-                        </div> <!--fim matches-->
-                        <div class="matches-next-game">
-                            <div class="teams">
-                                <div>
-                                    <p>vrs</p> 
-                                    <img src="images/FLA 1.png" alt="logo do time sk">
-                                </div>
-                                <p>vs</p>
-                                <div>
-                                    <img src="images/SK 1.png" alt="logo do time sk">
-                                    <p>sk</p>
-                                </div>
-                            </div> <!--fim teams-->
-                            <p>12/12/2012 13:00</p>
-                        </div> <!--fim matches-->
-                        <div class="matches-next-game">
-                            <div class="teams">
-                                <div>
-                                    <p>vrs</p> 
-                                    <img src="images/FLA 1.png" alt="logo do time sk">
-                                </div>
-                                <p>vs</p>
-                                <div>
-                                    <img src="images/SK 1.png" alt="logo do time sk">
-                                    <p>sk</p>
-                                </div>
-                            </div> <!--fim teams-->
-                            <p>12/12/2012 13:00</p>
-                        </div> <!--fim matches-->
-                        <div class="matches-next-game">
-                            <div class="teams">
-                                <div>
-                                    <p>vrs</p> 
-                                    <img src="images/FLA 1.png" alt="logo do time sk">
-                                </div>
-                                <p>vs</p>
-                                <div>
-                                    <img src="images/SK 1.png" alt="logo do time sk">
-                                    <p>sk</p>
-                                </div>
-                            </div> <!--fim teams-->
-                            <p>12/12/2012 13:00</p>
-                        </div> <!--fim matches-->
-                        <div class="matches-next-game">
-                            <div class="teams">
-                                <div>
-                                    <p>vrs</p> 
-                                    <img src="images/FLA 1.png" alt="logo do time sk">
-                                </div>
-                                <p>vs</p>
-                                <div>
-                                    <img src="images/SK 1.png" alt="logo do time sk">
-                                    <p>sk</p>
-                                </div>
-                            </div> <!--fim teams-->
-                            <p>12/12/2012 13:00</p>
-                        </div> <!--fim matches-->
+                        <div class="teams1">
                         <div class="matches-next-game">
                             <div class="teams">
                                 <div>
@@ -255,6 +191,83 @@
                             <p>12/12/2012 13:00</p>
                         </div> <!--fim matches-->
                     </div>
+                    <div class="teams2">
+                        <div class="matches-next-game">
+                            <div class="teams">
+                                <div>
+                                    <p>vrs</p> 
+                                    <img src="images/FLA 1.png" alt="logo do time sk">
+                                </div>
+                                <p>vs</p>
+                                <div>
+                                    <img src="images/SK 1.png" alt="logo do time sk">
+                                    <p>sk</p>
+                                </div>
+                            </div> <!--fim teams-->
+                            <p>12/12/2012 13:00</p>
+                        </div> <!--fim matches-->
+                        <div class="matches-next-game">
+                            <div class="teams">
+                                <div>
+                                    <p>vrs</p> 
+                                    <img src="images/FLA 1.png" alt="logo do time sk">
+                                </div>
+                                <p>vs</p>
+                                <div>
+                                    <img src="images/SK 1.png" alt="logo do time sk">
+                                    <p>sk</p>
+                                </div>
+                            </div> <!--fim teams-->
+                            <p>12/12/2012 13:00</p>
+                        </div> <!--fim matches-->
+                    </div>
+                    <div class="teams3">
+                        <div class="matches-next-game">
+                            <div class="teams">
+                                <div>
+                                    <p>vrs</p> 
+                                    <img src="images/FLA 1.png" alt="logo do time sk">
+                                </div>
+                                <p>vs</p>
+                                <div>
+                                    <img src="images/SK 1.png" alt="logo do time sk">
+                                    <p>sk</p>
+                                </div>
+                            </div> <!--fim teams-->
+                            <p>12/12/2012 13:00</p>
+                        </div> <!--fim matches-->
+                        <div class="matches-next-game">
+                            <div class="teams">
+                                <div>
+                                    <p>vrs</p> 
+                                    <img src="images/FLA 1.png" alt="logo do time sk">
+                                </div>
+                                <p>vs</p>
+                                <div>
+                                    <img src="images/SK 1.png" alt="logo do time sk">
+                                    <p>sk</p>
+                                </div>
+                            </div> <!--fim teams-->
+                            <p>12/12/2012 13:00</p>
+                        </div> <!--fim matches-->
+                    </div>
+                    <div class="teams4">
+                        <div class="matches-next-game">
+                            <div class="teams">
+                                <div>
+                                    <p>vrs</p> 
+                                    <img src="images/FLA 1.png" alt="logo do time sk">
+                                </div>
+                                <p>vs</p>
+                                <div>
+                                <img src="images/SK 1.png" alt="logo do time sk">
+                                    <p>sk</p>
+                                </div>
+                            </div> <!--fim teams-->
+                            <p>12/12/2012 13:00</p>
+                        </div> <!--fim matches-->
+                    </div>
+                    </div>
                 </aside>
             </div>
         </div> <!--fim bg-news-->
@@ -262,7 +275,7 @@
     <footer class="rodape">
         <div class="content flex-spaceb-center">
             <div class="links-footer">
-                <div class="links">
+                <div class="links um">
                     <h2>Links Úteis</h2>
                     <ul>
                         <li><a href="#">Regras de utilização</a></li>
@@ -271,7 +284,7 @@
                         <li><a href="#">Contato</a></li>
                     </ul>
                 </div>
-                <div class="links">
+                <div class="links dois">
                     <h2>Páginas</h2>
                     <ul>
                         <li><a href="#">ínicio</a></li>
@@ -284,7 +297,7 @@
             </div>
             <img class="logo-rodape" src="images/Logo 1.svg" alt="Logo E-players">
             <div class="socials">
-                <h2>Faça parte do nosso clan, receba notícias e promoções!</h2>
+                <h3>Faça parte do nosso clan, receba notícias e promoções!</h3>
                 <form action="">
                     <input type="email" placeholder="E-mail">
                     <input type="submit" value="Cadastrar">
@@ -295,6 +308,7 @@
                     <a href="#"><img src="images/face.png" alt="Logo do Facebook"></a>
                     <a href="#"><img src="images/yt.png" alt="Logo do Youtube"></a>
                 </div>
+                <img class="logo-embaixo" src="images/Logo 1.svg" alt="Logo E-players">
             </div>
         </div>
     </footer>
